--- a/demo/ScalaDemo/pom.xml
+++ b/demo/ScalaDemo/pom.xml
@@ -157,13 +157,13 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.11</artifactId>
+            <artifactId>spark-core_${scala.binary.version}</artifactId>
         </dependency>
 
 
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_2.11</artifactId>
+            <artifactId>spark-sql_${scala.binary.version}</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>commons-codec</groupId>
@@ -173,7 +173,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-streaming_2.11</artifactId>
+            <artifactId>spark-streaming_${scala.binary.version}</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
@@ -181,7 +181,7 @@
             <exclusions>
                 <exclusion>
                     <groupId>org.scala-lang.modules</groupId>
-                    <artifactId>scala-xml_2.11</artifactId>
+                    <artifactId>scala-xml_${scala.binary.version}</artifactId>
                 </exclusion>
                 <exclusion>
                     <groupId>log4j</groupId>
@@ -190,10 +190,10 @@
             </exclusions>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-hive_2.11 -->
+        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-hive_${scala.binary.version} -->
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-hive_2.11</artifactId>
+            <artifactId>spark-hive_${scala.binary.version}</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>commons-codec</groupId>
@@ -222,10 +222,10 @@
             </exclusions>
             <!-- <scope>provided</scope> -->
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-mllib_2.11 -->
+        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-mllib_${scala.binary.version} -->
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-mllib_2.11</artifactId>
+            <artifactId>spark-mllib_${scala.binary.version}</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.commons</groupId>
@@ -234,10 +234,10 @@
             </exclusions>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-flume_2.11 -->
+        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-flume_${scala.binary.version} -->
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-streaming-flume_2.11</artifactId>
+            <artifactId>spark-streaming-flume_${scala.binary.version}</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>commons-io</groupId>
@@ -358,7 +358,7 @@
 
         <dependency>
             <groupId>com.typesafe.scala-logging</groupId>
-            <artifactId>scala-logging_2.11</artifactId>
+            <artifactId>scala-logging_${scala.binary.version}</artifactId>
         </dependency>
 
         <dependency>
@@ -374,13 +374,13 @@
         <!-- https://mvnrepository.com/artifact/org.scala-lang.modules/scala-parser-combinators -->
         <dependency>
             <groupId>org.scala-lang.modules</groupId>
-            <artifactId>scala-parser-combinators_2.11</artifactId>
+            <artifactId>scala-parser-combinators_${scala.binary.version}</artifactId>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.github.pathikrit/better-files -->
         <dependency>
             <groupId>com.github.pathikrit</groupId>
-            <artifactId>better-files_2.11</artifactId>
+            <artifactId>better-files_${scala.binary.version}</artifactId>
         </dependency>
 
         <dependency>
@@ -396,12 +396,12 @@
 
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-actor_2.11</artifactId>
+            <artifactId>akka-actor_${scala.binary.version}</artifactId>
         </dependency>
 
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-remote_2.11</artifactId>
+            <artifactId>akka-remote_${scala.binary.version}</artifactId>
         </dependency>
 
 
@@ -410,7 +410,7 @@
             <groupId>com.typesafe</groupId>
             <artifactId>config</artifactId>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest_2.11 -->
+        <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest_${scala.binary.version} -->
 
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
@@ -470,11 +470,11 @@
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.11</artifactId>
+            <artifactId>scalatest_${scala.binary.version}</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>org.scala-lang.modules</groupId>
-                    <artifactId>scala-xml_2.11</artifactId>
+                    <artifactId>scala-xml_${scala.binary.version}</artifactId>
                 </exclusion>
             </exclusions>
             <scope>test</scope>
