--- a/demo/SparkDemo/pom.xml
+++ b/demo/SparkDemo/pom.xml
@@ -159,7 +159,7 @@
 
         <dependency>
             <groupId>com.typesafe.scala-logging</groupId>
-            <artifactId>scala-logging_2.11</artifactId>
+            <artifactId>scala-logging_${scala.binary.version}</artifactId>
         </dependency>
 
         <dependency>
@@ -175,12 +175,12 @@
 
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-actor_2.11</artifactId>
+            <artifactId>akka-actor_${scala.binary.version}</artifactId>
         </dependency>
 
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-remote_2.11</artifactId>
+            <artifactId>akka-remote_${scala.binary.version}</artifactId>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.typesafe/config -->
@@ -188,10 +188,10 @@
             <groupId>com.typesafe</groupId>
             <artifactId>config</artifactId>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest_2.11 -->
+        <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest_${scala.binary.version} -->
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.11</artifactId>
+            <artifactId>scalatest_${scala.binary.version}</artifactId>
             <scope>test</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
@@ -219,37 +219,37 @@
 
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.11</artifactId>
+            <artifactId>spark-core_${scala.binary.version}</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_2.11</artifactId>
+            <artifactId>spark-sql_${scala.binary.version}</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-streaming_2.11</artifactId>
+            <artifactId>spark-streaming_${scala.binary.version}</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
+            <artifactId>spark-streaming-kafka-0-10_${scala.binary.version}</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-hive_2.11 -->
+        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-hive_${scala.binary.version} -->
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-hive_2.11</artifactId>
+            <artifactId>spark-hive_${scala.binary.version}</artifactId>
             <!-- <scope>provided</scope> -->
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-mllib_2.11 -->
+        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-mllib_${scala.binary.version} -->
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-mllib_2.11</artifactId>
+            <artifactId>spark-mllib_${scala.binary.version}</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-flume_2.11 -->
+        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming-flume_${scala.binary.version} -->
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-streaming-flume_2.11</artifactId>
+            <artifactId>spark-streaming-flume_${scala.binary.version}</artifactId>
         </dependency>
 
         <dependency>
@@ -257,11 +257,17 @@
             <artifactId>mmlspark</artifactId>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka -->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_${scala.binary.version}</artifactId>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>0.10.0.1</version>
+            <version>0.10.2.2</version>
         </dependency>
 
         <dependency>
@@ -284,12 +290,12 @@
 
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-streaming-scala_2.11</artifactId>
+            <artifactId>flink-streaming-scala_${scala.binary.version}</artifactId>
             <version>1.9.1</version>
         </dependency>
         <!--<dependency>-->
         <!--<groupId>org.apache.mxnet</groupId>-->
-        <!--<artifactId>mxnet-full_2.11-linux-x86_64-cpu</artifactId>-->
+        <!--<artifactId>mxnet-full_${scala.binary.version}-linux-x86_64-cpu</artifactId>-->
         <!--</dependency>-->
 
         <dependency>
