--- a/demo/demo-common/pom.xml
+++ b/demo/demo-common/pom.xml
@@ -20,6 +20,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <protobuf.version>3.16.1</protobuf.version>
     </properties>
 
     <artifactId>demo-common</artifactId>
@@ -43,7 +44,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <protoSourceRoot>${project.basedir}/src/main/proto</protoSourceRoot>
-                    <protocArtifact>com.google.protobuf:protoc:3.2.0:exe:${os.detected.classifier}</protocArtifact>
+                    <protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}</protocArtifact>
                 </configuration>
                 <executions>
                     <execution>
@@ -88,7 +89,7 @@
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
-            <version>3.16.1</version>
+            <version>${protobuf.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
