--- a/demo/DataLoader/pom.xml
+++ b/demo/DataLoader/pom.xml
@@ -37,7 +37,7 @@
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
                 <configuration>
-                    <recompileMode>incremental</recompileMode>
+                    <!-- <recompileMode>incremental</recompileMode> -->
                     <args>
                         <arg>-unchecked</arg>
                         <arg>-deprecation</arg>
