--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,14 @@
 
     <repositories>
         <repository>
-            <id>bintray</id>
-            <name>Bintray</name>
-            <url>https://repos.spark-packages.org</url>
+            <id>central</id>
+            <name>central</name>
+            <url>https://repo1.maven.org/maven2/</url>
+        </repository>
+        <repository>
+            <id>spark-packages</id>
+            <name>spark-packages</name>
+            <url>https://repos.spark-packages.org/</url>
         </repository>
         <repository>
             <id>aliyun</id>
@@ -86,7 +91,7 @@
             <dependency>
                 <groupId>net.minidev</groupId>
                 <artifactId>json-smart</artifactId>
-                <version>2.4.4</version>
+                <version>2.4.8</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.scala-lang.modules/scala-parser-combinators -->
@@ -269,7 +274,7 @@
             <dependency>
                 <groupId>org.apache.hadoop</groupId>
                 <artifactId>hadoop-common</artifactId>
-                <version>3.2.3</version>
+                <version>3.3.3</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
