--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.path>${project.basedir}</project.path>
+        <log4j2.version>2.19.0</log4j2.version>
     </properties>
 
     <repositories>
@@ -74,11 +75,28 @@
                 <version>${scala.version}</version>
             </dependency>
 
+            <!-- log4j2 framework -->
             <dependency>
                 <groupId>com.typesafe.scala-logging</groupId>
                 <artifactId>scala-logging_${scala.binary.version}</artifactId>
                 <version>3.9.2</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-slf4j-impl</artifactId>
+                <version>${log4j2.version}</version>
+            </dependency>
+            <!-- log4j2 framework -->
 
             <!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
             <dependency>
