--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>demo/SparkDemo</module>
         <module>demo/ScalaDemo</module>
         <module>demo/demo-common</module>
+        <module>demo/FlinkDemo</module>
     </modules>
 
     <properties>
@@ -29,7 +30,9 @@
         <scala.version>2.12.8</scala.version>
         <scala.binary.version>2.12</scala.binary.version>
         <spark.version>3.1.2</spark.version>
+        <flink.version>1.17.0</flink.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.path>${project.basedir}</project.path>
