--- a/demo/FlinkDemo/src/main/resources/log4j2.properties
+++ b/demo/FlinkDemo/src/main/resources/log4j2.properties
@@ -6,3 +6,65 @@
 #appender.console.filter.threshold.level=debug
 #
 #rootLogger=ERROR,STDOUT
+
+## only use in classpath
+#appender.fileLogger.type=RollingFile
+#appender.fileLogger.name=fileLogger
+#appender.fileLogger.fileName=${sys:log4j.log.dir}/info.log
+#appender.fileLogger.filePattern=${sys:log4j.log.dir}/info.%d{yyyy-MM-dd}_%i.log.gz
+#appender.fileLogger.layout.type=PatternLayout
+#appender.fileLogger.layout.pattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: %m%n
+#appender.fileLogger.filter.threshold.type=ThresholdFilter
+#appender.fileLogger.filter.threshold.level=debug
+#appender.fileLogger.policies.type=Policies
+#appender.fileLogger.policies.size.type=SizeBasedTriggeringPolicy
+#appender.fileLogger.policies.size.size=200MB
+#appender.fileLogger.policies.time.type=TimeBasedTriggeringPolicy
+#appender.fileLogger.policies.time.interval=1
+#appender.fileLogger.policies.time.modulate=true
+#appender.fileLogger.strategy.type=DefaultRolloverStrategy
+#appender.fileLogger.strategy.max=10
+#appender.fileLogger.strategy.delete.type=Delete
+#appender.fileLogger.strategy.delete.basePath=${sys:log4j.log.dir}
+#appender.fileLogger.strategy.delete.maxDepth=5
+#appender.fileLogger.strategy.delete.IfFileName.type=IfFileName
+#appender.fileLogger.strategy.delete.IfFileName.glob=info.*.log.gz
+#appender.fileLogger.strategy.delete.ifLastModified.type=IfLastModified
+#appender.fileLogger.strategy.delete.ifLastModified.age=30d
+#
+#appender.apiLogger.type=RollingFile
+#appender.apiLogger.name=apiLogger
+#appender.apiLogger.fileName=${sys:log4j.log.dir}/server.log
+#appender.apiLogger.filePattern=${sys:log4j.log.dir}/server.%d{yyyy-MM-dd}_%i.log.gz
+#appender.apiLogger.layout.type=PatternLayout
+#appender.apiLogger.layout.pattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: %m%n
+#appender.apiLogger.filter.threshold.type=ThresholdFilter
+#appender.apiLogger.filter.threshold.level=debug
+#appender.apiLogger.policies.type=Policies
+#appender.apiLogger.policies.size.type=SizeBasedTriggeringPolicy
+#appender.apiLogger.policies.size.size=200MB
+#appender.apiLogger.policies.time.type=TimeBasedTriggeringPolicy
+#appender.apiLogger.policies.time.interval=1
+#appender.apiLogger.policies.time.modulate=true
+#appender.apiLogger.strategy.type=DefaultRolloverStrategy
+#appender.apiLogger.strategy.max=10
+#appender.apiLogger.strategy.delete.type=Delete
+#appender.apiLogger.strategy.delete.basePath=${sys:log4j.log.dir}
+#appender.apiLogger.strategy.delete.maxDepth=5
+#appender.apiLogger.strategy.delete.IfFileName.type=IfFileName
+#appender.apiLogger.strategy.delete.IfFileName.glob=server.*.log.gz
+#appender.apiLogger.strategy.delete.ifLastModified.type=IfLastModified
+#appender.apiLogger.strategy.delete.ifLastModified.age=30d
+#
+#appender.console.type=Console
+#appender.console.name=STDOUT
+#appender.console.layout.type=PatternLayout
+#appender.console.layout.pattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: %m%n
+#appender.console.filter.threshold.type=ThresholdFilter
+#appender.console.filter.threshold.level=debug
+#
+#rootLogger=INFO, fileLogger
+#
+#logger.api=INFO, apiLogger
+#logger.api.name=com.xx.xx
+#logger.api.additivity=false
