--- a/demo/FlinkDemo/src/main/resources/log4j2.properties
+++ b/demo/FlinkDemo/src/main/resources/log4j2.properties
@@ -7,7 +7,9 @@
 #
 #rootLogger=ERROR,STDOUT
 
-## only use in classpath
+
+
+#################### only use in classpath ####################
 #appender.fileLogger.type=RollingFile
 #appender.fileLogger.name=fileLogger
 #appender.fileLogger.fileName=${sys:log4j.log.dir}/info.log
@@ -68,3 +70,4 @@
 #logger.api=INFO, apiLogger
 #logger.api.name=com.xx.xx
 #logger.api.additivity=false
+###############################################################
