--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <scala.version>2.12.8</scala.version>
         <scala.binary.version>2.12</scala.binary.version>
         <spark.version>3.3.3</spark.version>
+        <akka.version>2.8.5</akka.version>
         <flink.version>1.17.0</flink.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -151,21 +152,21 @@
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
                 <artifactId>akka-actor_${scala.binary.version}</artifactId>
-                <version>2.5.16</version>
+                <version>${akka.version}</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-remote -->
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
                 <artifactId>akka-remote_${scala.binary.version}</artifactId>
-                <version>2.5.16</version>
+                <version>${akka.version}</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/com.typesafe/config -->
             <dependency>
                 <groupId>com.typesafe</groupId>
                 <artifactId>config</artifactId>
-                <version>1.2.1</version>
+                <version>1.4.2</version>
             </dependency>
             <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest_2.11 -->
             <dependency>
