--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
         <java.version>1.8</java.version>
         <scala.version>2.12.8</scala.version>
         <scala.binary.version>2.12</scala.binary.version>
-        <spark.version>3.3.3</spark.version>
-        <akka.version>2.8.5</akka.version>
+        <spark.version>3.4.4</spark.version>
+        <akka.version>2.5.23</akka.version>
         <flink.version>1.17.0</flink.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -159,6 +159,18 @@
             <dependency>
                 <groupId>com.typesafe.akka</groupId>
                 <artifactId>akka-remote_${scala.binary.version}</artifactId>
+                <version>${akka.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.typesafe.akka</groupId>
+                <artifactId>akka-slf4j_${scala.binary.version}</artifactId>
+                <version>${akka.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.typesafe.akka</groupId>
+                <artifactId>akka-protobuf_${scala.binary.version}</artifactId>
                 <version>${akka.version}</version>
             </dependency>
 
@@ -359,6 +371,17 @@
                 <version>1.3</version>
             </dependency>
 
+            <dependency>
+                <groupId>ml.dmlc</groupId>
+                <artifactId>xgboost4j_${scala.binary.version}</artifactId>
+                <version>1.7.6</version>
+            </dependency>
+
+            <dependency>
+                <groupId>ml.dmlc</groupId>
+                <artifactId>xgboost4j-spark_${scala.binary.version}</artifactId>
+                <version>1.7.6</version>
+            </dependency>
             <!--<dependency>-->
             <!--<groupId>org.apache.mxnet</groupId>-->
             <!--<artifactId>mxnet-full_2.11-linux-x86_64-cpu</artifactId>-->
