--- a/pom.xml
+++ b/pom.xml
@@ -375,12 +375,14 @@
                 <groupId>ml.dmlc</groupId>
                 <artifactId>xgboost4j_${scala.binary.version}</artifactId>
                 <version>1.7.6</version>
+                <!--                <version>3.0.0-SNAPSHOT</version>-->
             </dependency>
 
             <dependency>
                 <groupId>ml.dmlc</groupId>
                 <artifactId>xgboost4j-spark_${scala.binary.version}</artifactId>
                 <version>1.7.6</version>
+                <!--                <version>3.0.0-SNAPSHOT</version>-->
             </dependency>
             <!--<dependency>-->
             <!--<groupId>org.apache.mxnet</groupId>-->
