--- a/demo/FlinkDemo/pom.xml
+++ b/demo/FlinkDemo/pom.xml
@@ -248,17 +248,17 @@
             </exclusions>
         </dependency>
 
-        <!-- slf4j 2.0.x -->
+        <!-- slf4j 2.0.x  2.0.7 -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.7</version>
+            <version>1.7.36</version>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-reload4j</artifactId>
-            <version>2.0.7</version>
+            <version>1.7.36</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
