--- a/demo/FlinkDemo/pom.xml
+++ b/demo/FlinkDemo/pom.xml
@@ -218,23 +218,6 @@
             </exclusions>
         </dependency>
 
-        <!-- scala -->
-        <!-- <dependency>-->
-        <!--     <groupId>org.scala-lang</groupId>-->
-        <!--     <artifactId>scala-reflect</artifactId>-->
-        <!--     <version>${scala.version}</version>-->
-        <!-- </dependency>-->
-        <!-- <dependency>-->
-        <!--     <groupId>org.scala-lang</groupId>-->
-        <!--     <artifactId>scala-library</artifactId>-->
-        <!--     <version>${scala.version}</version>-->
-        <!-- </dependency>-->
-        <!-- <dependency>-->
-        <!--     <groupId>org.scala-lang</groupId>-->
-        <!--     <artifactId>scala-compiler</artifactId>-->
-        <!--     <version>${scala.version}</version>-->
-        <!-- </dependency>-->
-
         <!-- scala log framework -->
         <dependency>
             <groupId>com.typesafe.scala-logging</groupId>
@@ -248,17 +231,17 @@
             </exclusions>
         </dependency>
 
-        <!-- slf4j 2.0.x  2.0.7 -->
+        <!-- slf4j 2.0.x -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.36</version>
+            <!-- <version>2.0.7</version>-->
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-reload4j</artifactId>
-            <version>1.7.36</version>
+            <!-- <version>2.0.7</version>-->
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -266,22 +249,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
-        <!-- log4j2 -->
-        <!--        <dependency>-->
-        <!--            <groupId>org.apache.logging.log4j</groupId>-->
-        <!--            <artifactId>log4j-api</artifactId>-->
-        <!--        </dependency>-->
-
-        <!--        <dependency>-->
-        <!--            <groupId>org.apache.logging.log4j</groupId>-->
-        <!--            <artifactId>log4j-core</artifactId>-->
-        <!--        </dependency>-->
-
-        <!--        <dependency>-->
-        <!--            <groupId>org.apache.logging.log4j</groupId>-->
-        <!--            <artifactId>log4j-slf4j-impl</artifactId>-->
-        <!--        </dependency>-->
 
         <!-- java test framework -->
         <dependency>
